--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
     font-size: 35px; 
     font-weight: bold;
     margin-bottom: 30px;
+    margin-top: 0px;
 }
 
 .section-heading p{
@@ -147,7 +148,8 @@ nav .menu a{
 }
 
 #skills, #resume{
-    padding-top: 130px;
+    padding-top: 0px;
+    margin-bottom: 100px;
 }
 
 .skills-container{
@@ -379,6 +381,13 @@ nav .menu {
 
 .section-heading p {
     font-size: 15px;
+}
+
+.section-heading h2 {
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    margin-top: 0;
 }
 
 .skill-box {
